--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,8 +3,8 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   exclude:
     - test/**
-    - lib/app/localization/generated/**
-    - lib/app/utils/network/**
+    - lib/core/localization/generated/**
+    - lib/core/utils/network/**
     - '**.g.dart'
   language:
     strict-casts: true
@@ -70,8 +70,8 @@ dart_code_metrics:
         exclude:
           - test/**
           - lib/main.dart
-          - lib/app/utils/extensions.dart
-          - lib/app/navigation/navigation_helpers.dart
+          - lib/core/utils/extensions.dart
+          - lib/core/navigation/navigation_helpers.dart
     - prefer-moving-to-variable
     - prefer-trailing-comma
     - prefer-immediate-return
